build 2 - added new position - dorohova

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
         <input type="text" size="5" id="internal-mkad"><br>
         <span>Количество точек в пределах 20 км от МКАД:</span>
         <input type="text" size="5" id="around-mkad"><br>
+        <input type="checkbox" value="dorohov" id="dorohov">
+        <span>Дорохова есть?</span>
         <h3>Точки в пределах более 20 км от МКАД</h3>
-        <span class="span-far-mkad">Первая точка, км от МКАД:</span>
+        <span class="span-far-mkad">Первая точка, км от МКАД (в одну сторону):</span>
         <input type="text" size="5" id="far-mkad-1"><br>
-        <span class="span-far-mkad">Вторая точка, км от МКАД:</span>
+        <span class="span-far-mkad">Вторая точка, км от МКАД (в одну сторону):</span>
         <input type="text" size="5" id="far-mkad-2"><br>
-        <span class="span-far-mkad">Третья точка, км от МКАД:</span>
+        <span class="span-far-mkad">Третья точка, км от МКАД (в одну сторону):</span>
         <input type="text" size="5" id="far-mkad-3"><br>
         <button class="button" onclick="calculate()">Рассчитать</button>
         <button class="button" onclick="reset()">Очистить</button>
